--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AnimeList">
-        <activity android:name=".Main_Page"></activity>
+        <activity android:name=".BottomNavigationBar"/>
         <activity android:name=".SignUpScreen" />
         <activity android:name=".MainActivity">
             <intent-filter>
