--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AnimeList">
+
         <activity android:name=".BottomNavigationBar"/>
-        <activity android:name=".SignUpScreen" />
+        <activity android:name=".SignUpScreen"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
