--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity android:name=".BottomNavigationBar"/>
         <activity android:name=".SignUpScreen"
             android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".MainActivity">
+        <activity android:name=".SignInActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
